[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "interactive-figure"
dynamic = ["version"]
description = "Create interactive Matplotlib figures!"
requires-python = ">=3.9"
readme = "README.md"
license = "MIT"
keywords = []
authors = [
  { name = "Teun Mathijssen", email = "teun.c.mathijssen@gmail.com" },
]
classifiers = [
  "Framework :: Matplotlib",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Visualization"
]
dependencies = ["matplotlib"]

[project.urls]
Documentation = "https://teuncm.github.io/interactive-figure/autoapi/interactive_figure/interactive_figure/index.html"
Issues = "https://github.com/teuncm/interactive-figure/issues"
Source = "https://github.com/teuncm/interactive-figure"

[tool.hatch.version]
path = "src/interactive_figure/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "sphinx",
  "sphinx_rtd_theme",
  "sphinx-autoapi",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.7", "3.8", "3.9", "3.10", "3.11"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=23.1.0",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/interactive_figure tests}"
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.black]
target-version = ["py37"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py37"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["interactive_figure"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["interactive_figure", "tests"]
branch = true
parallel = true
omit = [
  "src/interactive_figure/__about__.py",
]

[tool.coverage.paths]
interactive_figure = ["src/interactive_figure", "*/interactive-figure/src/interactive_figure"]
tests = ["tests", "*/interactive-figure/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
